fix: logging and query parameters
fix passing of log fields to logger
fix design missing query parameters for min and max
regenerate goa gen code for design fix
